--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^4.24.5",
     "gatsby-emotion-dark-mode": "^1.1.1",
     "gatsby-plugin-google-adsense": "^1.1.3",
+    "gatsby-plugin-google-analytics": "^5.13.1",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "prismjs": "^1.29.0",
