--- a/package.json
+++ b/package.json
@@ -10,21 +10,38 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@gatsbyjs/reach-router": "^1.3.7",
+    "@gatsbyjs/webpack-hot-middleware": "^2.25.3",
     "@radix-ui/react-icons": "^1.1.1",
+    "@reach/router": "^1.3.4",
     "@svgr/webpack": "^8.0.1",
-    "gatsby": "^4.24.5",
+    "anser": "^2.3.0",
+    "css.escape": "^1.5.1",
+    "error-stack-parser": "^2.1.4",
+    "fs-extra": "^11.2.0",
+    "gatsby": "^5.14.0",
     "gatsby-emotion-dark-mode": "^1.1.1",
+    "gatsby-link": "^5.14.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^5.13.1",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-react-router-scroll": "^6.14.0",
+    "gatsby-script": "^2.14.0",
+    "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
+    "node-html-parser": "^6.1.13",
+    "platform": "^1.3.6",
     "prismjs": "^1.29.0",
+    "prop-types": "^15.8.1",
+    "query-string": "^9.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-responsive": "^9.0.2",
     "react-rotating-text": "^1.4.1",
     "sass": "^1.55.0",
+    "shallow-compare": "^1.2.2",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
