--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "devDependencies": {
     "@babel/eslint-plugin": "^7.19.1",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
