--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-react-router-scroll": "^6.14.0",
     "gatsby-script": "^2.14.0",
     "lodash": "^4.17.21",
+    "minimatch": "^10.0.1",
     "mitt": "^3.0.1",
     "node-html-parser": "^6.1.13",
     "platform": "^1.3.6",
