--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/styled": "^11.10.5",
     "@gatsbyjs/reach-router": "^1.3.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.3",
-    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.1",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "^8.0.1",
     "anser": "^2.3.0",
@@ -29,6 +29,7 @@
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-react-router-scroll": "^6.14.0",
     "gatsby-script": "^2.14.0",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "minimatch": "^10.0.1",
     "mitt": "^3.0.1",
