--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@emotion/styled": "^11.10.5",
     "@gatsbyjs/reach-router": "^1.3.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.3",
-    "@radix-ui/react-icons": "^1.3.1",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "^8.0.1",
     "anser": "^2.3.0",
@@ -42,6 +41,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-responsive": "^9.0.2",
     "react-rotating-text": "^1.4.1",
     "sass": "^1.55.0",
